# rustbus

./: .gitignore  Cargo.toml  LICENSE  README.md  Readme.md  Vagrantfile  deny.toml
.github/workflows/: ci.yml
benches/: marshal_benchmark.rs
example_keywallet/: Cargo.toml
example_keywallet/src/: lib.rs  messages.rs
examples/: con.rs  conn.rs  conversions.rs  fd.rs  server.rs  sig.rs  user_defined_types.rs
fuzz/fuzz_targets/: fuzz_unmarshal.rs
rustbus/: Cargo.toml  Readme.md
rustbus/benches/: marshal_benchmark.rs
rustbus/examples/: conn.rs  deriving.rs  dispatch.rs  fd.rs  server.rs  sig.rs  systemd_example.rs  user_defined_types.rs
rustbus/fuzz/: Cargo.toml
rustbus/fuzz/fuzz_targets/: fuzz_unmarshal.rs
rustbus/src/: auth.rs  client_conn.rs  connection.rs  lib.rs  message_builder.rs  signature.rs  standard_messages.rs  tests.rs  wire.rs
rustbus/src/connection/: dispatch_conn.rs  ll_conn.rs  mod.rs  rpc_conn.rs
rustbus/src/params/: container_constructors.rs  conversion.rs  message.rs  mod.rs  types.rs  validation.rs
rustbus/src/peer/: mod.rs  peer_handling.rs
rustbus/src/signature/: signature_iter.rs
rustbus/src/tests/: dbus_send.rs  fdpassing.rs  mod.rs  verify_marshalling.rs  verify_padding.rs
rustbus/src/wire/: errors.rs  marshal.rs  mod.rs  unixfd.rs  unmarshal.rs  unmarshal_context.rs  util.rs  validate_raw.rs  variant_macros.rs  wrapper_types.rs
rustbus/src/wire/marshal/: base.rs  mod.rs  traits.rs
rustbus/src/wire/marshal/param/: base.rs  container.rs
rustbus/src/wire/marshal/traits/: base.rs  container.rs
rustbus/src/wire/unmarshal/: base.rs  container.rs  iter.rs  mod.rs  param.rs  traits.rs
rustbus/src/wire/unmarshal/param/: base.rs  container.rs
rustbus/src/wire/unmarshal/traits/: base.rs  container.rs
rustbus/src/wire/wrapper_types/: unixfd.rs
rustbus_derive/: Cargo.toml
rustbus_derive/examples/: sample.rs
rustbus_derive/src/: lib.rs  structs.rs  variants.rs
rustbus_derive_test/: Cargo.toml
rustbus_derive_test/src/: lib.rs
src/: auth.rs  client_conn.rs  lib.rs  marshal.rs  message.rs  message_builder.rs  signature.rs  standard_messages.rs  tests.rs  unmarshal.rs
src/params/: container_constructors.rs  conversion.rs  message.rs  mod.rs  params.rs  types.rs  validation.rs
src/peer/: mod.rs  peer.rs  peer_handling.rs
src/tests/: dbus_send.rs  fdpassing.rs  mod.rs  verify_marshalling.rs  verify_padding.rs
src/wire/: marshal.rs  marshal_base.rs  marshal_container.rs  marshal_trait.rs  mod.rs  unmarshal.rs  unmarshal_base.rs  unmarshal_container.rs  unmarshal_iter.rs  unmarshal_trait.rs  util.rs  validate_raw.rs  variant_macros.rs
src/wire/marshal/: base.rs  container.rs  mod.rs  traits.rs
src/wire/unmarshal/: base.rs  container.rs  iter.rs  mod.rs  traits.rs
