[package]
name = "rustbus"
version = "0.1.0"
authors = ["Moritz Borcherding <moritz.borcherding@web.de>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.16.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "marshal_benchmark"
harness = false