[package]
name = "example_keywallet"
version = "0.1.0"
authors = ["Moritz Borcherding <moritz.borcherding@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"rustbus" = {path = "../rustbus", version = "0.9.0"}
"rustbus_derive" = {path = "../rustbus_derive", version = "0.1.0"}