[package]
name = "rustbus"
version = "0.17.0"
authors = ["Moritz Borcherding <moritz.borcherding@web.de>"]
edition = "2018"
license = "MIT"
description = "An implementation of the dbus protocol"
homepage = "https://github.com/KillingSpark/rustbus" 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.22.0"
rustbus_derive = {version = "0.4.0", path = "../rustbus_derive"}
thiserror = "1.0.30"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "marshal_benchmark"
harness = false