[package]
name = "rustbus"
version = "0.19.3"
authors = ["Moritz Borcherding <moritz.borcherding@web.de>"]
edition = "2018"
license = "MIT"
description = "An implementation of the dbus protocol"
homepage = "https://github.com/KillingSpark/rustbus" 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.26"
rustbus_derive = {version = "0.5.0", path = "../rustbus_derive"}
thiserror = "1.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "marshal_benchmark"
harness = false