[package]
name = "rustbus"
version = "0.19.3"
authors = ["Moritz Borcherding <moritz.borcherding@web.de>"]
edition = "2018"
license = "MIT"
description = "An implementation of the dbus protocol"
homepage = "https://github.com/KillingSpark/rustbus" 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = { version = "0.28", features = ["fs", "poll", "socket", "uio", "user"] }
rustbus_derive = {version = "0.6.0", path = "../rustbus_derive"}
thiserror = "1.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "marshal_benchmark"
harness = false
