[package]
name = "rustbus_derive"
version = "0.1.0"
authors = ["Moritz Borcherding <moritz.borcherding@web.de>"]
edition = "2018"
license = "MIT"
description = "derive proc-macros for the rustbus crate"
homepage = "https://github.com/KillingSpark/rustbus" 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
"rustbus" = {path = "../rustbus", version = "0.8.0"}
syn = "1.0.44"
quote = "1.0.7"
proc-macro2 = "1.0.24"

